# rust

./: .gitignore  README.md  index.html  main.rs
actix/shell_commands/: .gitignore  Cargo.toml  Makefile  curl_post.sh  data.json  docker-compose.yml
actix/shell_commands/openalpr/: Dockerfile  Makefile  alprd.conf
actix/shell_commands/src/: main.rs
actix/shell_commands/static/config/: alprd.conf
actix/shell_commands/static/scripts/: alpr.json  client.py  curl_post.sh  data.json  tmp.js  v1.rs
commands_basic/: Cargo.toml  README.md  runner.sh
commands_basic/src/: main.rs
commands_http/: Cargo.toml
commands_spawn/: Cargo.toml
embedded/qemu/app/: Cargo.toml  custom_runner.sh
hello_world/: README.md
hello_world/src/: main.rs
multi_threaded_server/: Cargo.toml  sleep.html
multi_threaded_server/src/: main.rs
single_threaded_server/src/: main.rs
tutorials/arrays/: .gitignore
tutorials/arrays/src/: main.rs
tutorials/formatted_ptint/: Cargo.toml
tutorials/formatted_ptint/src/: main.rs
