[package]
name = "shell_commands"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tracing-actix-web = "0.7"
tracing = "0.1"
env_logger = "0.11"
log = "0.4"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
regex = "1.3.9"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
